@@ -34,6 +34,8 @@ import org.apache.lucene.util.InfoStream;
 import org.apache.lucene.util.packed.PackedInts;
 import org.apache.lucene.util.packed.PackedLongValues;
 
+import static org.apache.lucene.index.IndexWriter.isCongruentSort;
+
 /** Holds common state used during segment merging.
  *
  * @lucene.experimental */
@@ -223,50 +225,14 @@ public class MergeState {
       return originalReaders;
     }
 
-    /** If an incoming reader is not sorted, because it was flushed by IW older than {@link Version.LUCENE_7_0_0}
-     * or because we add unsorted segments from another index {@link IndexWriter#addIndexes(CodecReader...)} ,
-     * we sort it here:
-     */
-    final Sorter sorter = new Sorter(indexSort);
     List<CodecReader> readers = new ArrayList<>(originalReaders.size());
 
     for (CodecReader leaf : originalReaders) {
       Sort segmentSort = leaf.getMetaData().getSort();
-
-      if (segmentSort == null) {
-        // This segment was written by flush, so documents are not yet sorted, so we sort them now:
-        long t0 = System.nanoTime();
-        Sorter.DocMap sortDocMap = sorter.sort(leaf);
-        long t1 = System.nanoTime();
-        double msec = (t1-t0)/1000000.0;
-        
-        if (sortDocMap != null) {
-          if (infoStream.isEnabled("SM")) {
-            infoStream.message("SM", String.format(Locale.ROOT, "segment %s is not sorted; wrapping for sort %s now (%.2f msec to sort)", leaf, indexSort, msec));
-          }
-          needsIndexSort = true;
-          leaf = SlowCodecReaderWrapper.wrap(SortingLeafReader.wrap(new MergeReaderWrapper(leaf), sortDocMap));
-          leafDocMaps[readers.size()] = new DocMap() {
-              @Override
-              public int get(int docID) {
-                return sortDocMap.oldToNew(docID);
-              }
-            };
-        } else {
-          if (infoStream.isEnabled("SM")) {
-            infoStream.message("SM", String.format(Locale.ROOT, "segment %s is not sorted, but is already accidentally in sort %s order (%.2f msec to sort)", leaf, indexSort, msec));
-          }
-        }
-
-      } else {
-        if (segmentSort.equals(indexSort) == false) {
-          throw new IllegalArgumentException("index sort mismatch: merged segment has sort=" + indexSort + " but to-be-merged segment has sort=" + segmentSort);
-        }
-        if (infoStream.isEnabled("SM")) {
-          infoStream.message("SM", "segment " + leaf + " already sorted");
-        }
+      if (segmentSort == null || isCongruentSort(indexSort, segmentSort) == false) {
+        throw new IllegalArgumentException("index sort mismatch: merged segment has sort=" + indexSort +
+            " but to-be-merged segment has sort=" + (segmentSort == null ? "null" : segmentSort));
       }
-
       readers.add(leaf);
     }
 
